# martelos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aideiapiteste1teste2  alfabeto.c  binario.c  crypto.c  install.sh  io.c  main.c  martelos.h  motor.c  parser.c  reparo.sh  reparo_final.sh  resgata.sh  teste.c
.github/workflows/: build.yml
